# nlp100-2020-rust

./: Cargo.toml  Makefile.toml  test.ps1
.github/workflows/: test.yml
answers/: p4  p5  p6  p8
src/p0/: main.rs
src/p1/: main.rs
src/p2/: main.rs
src/p3/: main.rs
src/p4/: main.rs
src/p5/: main.rs
src/p6/: main.rs
src/p7/: main.rs
src/p8/: main.rs
