[package]
name = "nlp100-2020-rust"
version = "0.1.0"
authors = ["masinc <masinc000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "p0"
path = "src/p0/main.rs"

[[bin]]
name = "p1"
path = "src/p1/main.rs"

[[bin]]
name = "p2"
path = "src/p2/main.rs"

[[bin]]
name = "p3"
path = "src/p3/main.rs"

[dependencies]
